Fix spacing

--- a/src/screens/Home.css
+++ b/src/screens/Home.css
@@ -92,17 +92,17 @@
     font-weight: 600;
     text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.8);
     font-size: 0.875em;
-    margin-bottom: 3px;
+    margin-bottom: 8px;
 }
 
 .brief-item-text p {
     font-size: 0.625em;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .dot {
     font-size: 1em !important;
-    margin-bottom: 0 !important;
+    margin-bottom: 5px !important;
 } 
 
 .brief-item button {
